Tested all endpoints and the porject is now running fine
